--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@webtor/player-sdk-js",
-  "version": "0.2.15",
-  "description": "Player SDK for online torrent streaming",
+  "name": "@webtor/embed-sdk-js",
+  "version": "0.2.17",
+  "description": "Webtor.io embed SDK for online torrent streaming and download on your site",
   "main": "src/index.js",
   "browserslist": "> 2%, not dead",
   "repository": {
     "type": "git",
-    "url": "https://github.com/webtor-io/player-sdk-js"
+    "url": "https://github.com/webtor-io/embed-sdk-js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,7 +33,7 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.6",
-    "http-server": "^0.12.3",
+    "http-server": "^14.1.1",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
